--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
 		"dev": "vite serve",
 		"build": "vite build",
 		"lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs, --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+		"format": "prettier --write src/"
 	},
 	"dependencies": {
+		"@heroicons/vue": "^2.1.5",
 		"@vitejs/plugin-vue": "^5.1.4",
 		"@vueuse/core": "^11.1.0",
 		"axios": "^1.6.8",
@@ -29,10 +30,10 @@
 		"@vue/cli-service": "~5.0.0",
 		"eslint": "^8.57.1",
 		"eslint-plugin-vue": "^8.0.3",
+		"postcss": "^8.4.47",
 		"prettier": "^3.3.3",
 		"sass": "^1.74.1",
-		"postcss": "^8.4.47",
-    "tailwindcss": "^3.4.13"
+		"tailwindcss": "^3.4.13"
 	},
 	"eslintConfig": {
 		"root": true,
